--- a/Reston.Identity/Content/app/login.html
+++ b/Reston.Identity/Content/app/login.html
@@ -19,20 +19,11 @@
     <link href="{siteUrl}/content/app/assets/plugins/boostrapv3/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="{siteUrl}/content/app/assets/plugins/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css" />
     <link href="{siteUrl}/content/app/assets/plugins/jquery-scrollbar/jquery.scrollbar.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="{siteUrl}/content/app/assets/plugins/bootstrap-select2/select2.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="{siteUrl}/content/app/assets/plugins/switchery/css/switchery.min.css" rel="stylesheet" type="text/css" media="screen" />
     <link href="{siteUrl}/content/app/pages/css/pages-icons.css" rel="stylesheet" type="text/css">
     <link class="main-stylesheet" href="/content/app/pages/css/pages.css" rel="stylesheet" type="text/css" />
     <!--[if lte IE 9]>
         <link href="pages/css/ie9.css" rel="stylesheet" type="text/css" />
     <![endif]-->
-    <script type="text/javascript">
-        window.onload = function () {
-            // fix for windows 8
-            if (navigator.appVersion.indexOf("Windows NT 6.2") != -1)
-                document.head.innerHTML += '<link rel="stylesheet" type="text/css" href="{siteUrl}/content/pages/css/windows.chrome.fix.css" />'
-        }
-    </script>
 </head>
 <body class="fixed-header   ">
     <!-- START PAGE-CONTAINER -->
@@ -127,7 +118,6 @@
                 <div class="pull-bottom sm-pull-bottom">
                     <div class="m-b-30 p-r-80 sm-m-t-20 sm-p-r-15 sm-p-b-20 clearfix">
                         <div class="col-sm-3 col-md-2 no-padding">
-                            <img alt="" class="m-t-5" data-src="assets/img/demo/pages_icon.png" data-src-retina="assets/img/demo/pages_icon_2x.png" height="60" src="assets/img/demo/pages_icon.png" width="60">
                         </div>
                         <div class="col-sm-9 no-padding m-t-10">
                             <!--<p>
@@ -159,9 +149,7 @@
     <script src="{siteUrl}/content/app/assets/plugins/jquery-ios-list/jquery.ioslist.min.js" type="text/javascript"></script>
     <script src="{siteUrl}/content/app/assets/plugins/jquery-actual/jquery.actual.min.js"></script>
     <script src="{siteUrl}/content/app/assets/plugins/jquery-scrollbar/jquery.scrollbar.min.js"></script>
-    <script type="text/javascript" src="{siteUrl}/content/app/assets/plugins/bootstrap-select2/select2.min.js"></script>
     <script type="text/javascript" src="{siteUrl}/content/app/assets/plugins/classie/classie.js"></script>
-    <script src="{siteUrl}/content/app/assets/plugins/switchery/js/switchery.min.js" type="text/javascript"></script>
     <script src="{siteUrl}/content/app/assets/plugins/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
     <!-- END VENDOR JS -->
     <!-- BEGIN CORE TEMPLATE JS -->
@@ -170,21 +158,21 @@
     <!-- BEGIN PAGE LEVEL JS -->
     <script src="{siteUrl}/content/app/assets/js/scripts.js" type="text/javascript"></script>
     <!-- END PAGE LEVEL JS -->
-    <script>
+    <!--<script>
         $(function () {
             
             $('#form-login').validate();
            
         })
-    </script>
+    </script>-->
 
     <script src="{siteUrl}/content/libs/angular/angular.1.2.13.min.js"></script>
     <script src="{siteUrl}/content/libs/encoder/encoder.min.js"></script>
     <script src="{siteUrl}/content/app/app.js"></script>
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
         function forgotPwd() {
             alert("hip");
         }
-    </script>
+    </script>-->
 </body>
 </html>
