--- a/Reston.Identity/Content/app/login.html
+++ b/Reston.Identity/Content/app/login.html
@@ -62,7 +62,7 @@
                                 </div>
                                 <div ng-show="model.errorMessage">
                                     <div class="alert alert-danger" role="alert">
-                                        <button class="close" data-dismiss="alert"></button>
+                                        <!--<button class="close" data-dismiss="alert"></button>-->
                                         <strong>Error : {{model.errorMessage}} </strong>
                                     </div>
                                 </div>
