--- a/Reston.Identity/Content/app/login.html
+++ b/Reston.Identity/Content/app/login.html
@@ -25,13 +25,14 @@
     <![endif]-->
 </head>
 <body>
-    <h1 class="w3layouts agileits">MANDIRI TUNAS FINANCE</h1>
+    <img class="w3layouts agileits" src="{siteUrl}/content/app/images/logo-mtf.png" style="margin-left:70px;" width="250px;" height="100px;"/>
+    <!--<h1 class="w3layouts agileits"></h1>-->
 
     <div class="container w3layouts agileits">
         <div class="content-left w3layouts agileits">
-            <img src="{siteUrl}/content/app/images/background.jpg" width="100%" height="568px">
-            <p>Belum punya akun? <a href="http://localhost:49559/registrasi.html" style="color:dodgerblue">Daftar sebagai Rekanan Baru MTF.</a></p>
-            <a class="more w3layouts agileits" href="#">LEARN MORE</a>
+            <img src="" width="100%" height="568px"><!--{siteUrl}/content/app/images/background.jpg-->
+            <p>Belum punya akun? <a href="http://localhost:49559/registrasi.html" style="color:#013066">Daftar sebagai Rekanan Baru MTF.</a></p>
+            <!--<a class="more w3layouts agileits" href="#">LEARN MORE</a>-->
             <br /><br />
             <!--<label>Sudah mendaftar tetapi belum mendapat akses ke sistem?</label><p class="send-button w3layouts agileits"><label><a href="http://localhost:49559/registrasi.html">Lacak status pengajuan Anda di sini.</a></label></p>-->
         </div>
@@ -89,7 +90,6 @@
     <!--<div class="footer w3layouts agileits">
         <p> &copy; 2016 Travel Agency Sign In Form. All Rights Reserved | Template by <a href="http://w3layouts.com" target="_blank">W3layouts</a></p>
     </div>-->
-
     <!-- END PAGE CONTAINER -->
     <!-- BEGIN VENDOR JS -->
     <script id='modelJson' type='application/json'>
