betulin login Logout authorization di pengdaan

--- a/Reston.Identity/Content/app/loggedOut.html
+++ b/Reston.Identity/Content/app/loggedOut.html
@@ -4,11 +4,12 @@
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta charset="utf-8" />
     <title>Redirecting</title>
-
+    
 </head>
 <body class="fixed-header">
-
-    <script src="{siteUrl}/content/app/redirect-login.js"></script>
+    <input type="hidden" id="url" value="{siteUrl}" />
+   <script src="{siteUrl}/content/app/redirect-login.js"></script>
+   
 </body>
 </html>
 
