--- a/Reston.Identity/Content/app/login.html
+++ b/Reston.Identity/Content/app/login.html
@@ -63,11 +63,11 @@
                                 <div class="send-button w3layouts agileits">
                                     <input type="submit" value="login" />
                                 </div>
-                                <img src="http://localhost:7348/Home/GetCaptchaImage?k={{model.username}}" width="200px;" height="100px;" />
+                                <img src="{siteUrl}/Home/GetCaptchaImage?k={{model.username}}" width="200px;" height="100px;" />
 
-                                <p><strong><a href="http://localhost:49559/registrasi.html">belum punya akun?</a></strong>daftar sebagai rekanan baru mtf.</p>
+                                <p><strong><a href="{procUrl}registrasi.html">belum punya akun?</a></strong>daftar sebagai rekanan baru mtf.</p>
                                 <p>sudah mendaftar tetapi belum mendapat akses ke sistem?</p>
-                                <p><strong><a href="http://localhost:49559/registrasi.html">lacak status pengajuan</a><strong> anda disini</p>
+                                <p><strong><a href="{procUrl}lacak.html">lacak status pengajuan</a><strong> anda disini</p>
                                 <div class="clear"></div>
 
                                 <!--<div class="" ng-show="model.allowRememberMe">
