--- a/Reston.Identity/Content/app/login.html
+++ b/Reston.Identity/Content/app/login.html
@@ -58,7 +58,7 @@
                                 <input type="password" name="password" ng-model="model.password" placeholder="Password" required="">
                                 <br />
                                 <label style="font-weight:600; font-size:20px;">captcha</label><br />
-                                <input type="text" name="captca" placeholder="Captca" ng-model="model.captca" required>
+                                <input type="text" name="captca" placeholder="Captcha" ng-model="model.captca" required>
                                 <br />
                                 <div class="send-button w3layouts agileits">
                                     <input type="submit" value="login" />
