--- a/Reston.Identity/Content/app/login.html
+++ b/Reston.Identity/Content/app/login.html
@@ -30,7 +30,7 @@
     <br /><br />
     <div class="container w3layouts agileits">
         <div class="content-left w3layouts agileits">
-            <img src="{siteUrl}/content/app/images/Left-bg.jpg" width="100%" height="593px"><!--{siteUrl}/content/app/images/background.jpg-->
+            <img src="{siteUrl}/content/app/images/Left-bg.jpg" width="100%" height="588px"><!--{siteUrl}/content/app/images/background.jpg-->
             <!--<p>Belum punya akun? <a href="http://localhost:49559/registrasi.html" style="color:#013066">Daftar sebagai Rekanan Baru MTF.</a></p>-->
             <!--<a class="more w3layouts agileits" href="#">LEARN MORE</a>-->
             <br /><br />
@@ -64,12 +64,12 @@
                                 <input type="password" name="password" ng-model="model.password" placeholder="Password" required="">
                                 <br />
                                 <label style="font-weight:600; font-size:20px;">captcha</label><br />
-                                <input autocomplete="off" type="text" name="captca" placeholder="Captcha" ng-model="model.captca" required>
+                                <input autocomplete="off" class="captcha" type="text" name="captca" placeholder="Captcha" ng-model="model.captca" required>
                                 <br />
                                 <div class="send-button w3layouts agileits">
                                     <input type="submit" value="login" />
                                 </div>
-                                <img src="{siteUrl}/Home/GetCaptchaImage?k={{model.username}}" width="200px;" height="100px;" />
+                                <img src="{siteUrl}/Home/GetCaptchaImage?k={{model.username}}" width="200px;" height="80px;" />
 
                                 <p><strong><a href="{procUrl}registrasi.html">belum punya akun?</a></strong>daftar sebagai rekanan baru mtf.</p>
                                 <p>sudah mendaftar tetapi belum mendapat akses ke sistem?</p>
